- added datails.html report. added barchart diagram, reading templates from jar resources